<resources>
    <string name="app_name">GB Version APK Pro Tool 2023</string>
    <string name="send">Send</string>
    <string name="send_empty">Send Empty</string>
    <string name="blank_massage">‎</string>
    <string name="blank_massage1"></string>
    <string name="paste_link">Paste link</string>
    <string name="paste">Paste</string>
    <string name="download">Download</string>
    <string name="label_ok">Ok</string>
    <string name="message_no_permissions">Permission Denied.</string>
    <string name="saved">Saved!</string>
    <string name="ringtone_maker">Ringtone Maker</string>
    <string name="video_editor">Video Editor</string>
    <string name="collage_maker">Collage Maker</string>
    <string name="insta_grid">Grid Maker</string>
    <string name="status_n_saver">Status\nSaver</string>
    <string name="cleaner">Cleaner</string>
    <string name="demo_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="search_wallpaper">Search wallpapers</string>
    <string name="comedy">Comedy</string>
    <string name="watch">Watch</string>
    <string name="screen_recorder">Screen recorder</string>
    <string name="status">Status</string>
    <string name="paste_instagram_link_here">Paste link only Reels, Video &amp; Posts.</string>
    <string name="paste_facebook_link_here">Paste link only Reels, Video &amp; Posts.</string>
    <string name="ringtones">Ringtones</string>
    <string name="status_maker">Status Maker</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="share_media">Share</string>
    <string name="save">Save</string>
    <string name="dialog_save_text">Are you sure want to Save this Image?</string>
    <string name="dialog_discard_text">Your changes will be discarded.\nDo you want to proceed?</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="save_and_share"><![CDATA[Save & Share]]></string>
    <string name="photo_filters">Photo Filters</string>
    <string name="image_saved_text">Image saved successfully..!</string>
    <string name="photo_warp">Photo Warp</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="your_age">Your Age</string>
    <string name="age_details_subtitle">Here is your age simplified and converted to many formats with all details!</string>
    <string name="_75_high">75% (High)</string>
    <string name="_25_low">25% (Low)</string>
    <string name="_50_medium">50% (Medium)</string>
    <string name="video_player">Video Player</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="downloads">Downloads</string>
    <string name="dialog_discard_title">Changes will not be saved. Do you want to proceed?</string>
    <string name="discard">Discard</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="photo_compress">Photo Compress</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="version">Version</string>
    <string name="share_app_desc"><![CDATA[Watch videos, Listen your favourite music &amp; share them with your friends using this video music player!\nDownload here:\nhttps://play.google.com/store/apps/details?id=%s]]></string>
    <string name="rating_desc">If %s makes you happy and satisfy. Please give us 5 stars</string>
    <string name="status_saver">Status Saver</string>
    <string name="tools">Tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sidebar_button_logout">Logout</string>
    <string name="sidebar_button_reload">Reload</string>
    <string name="sidebar_button_new_session">New Session</string>
    <string name="sidebar_button_switch_session">Switch Session</string>
    <string name="sidebar_button_toggle_appbar_visibility">Toggle Appbar Visibility</string>
    <string name="sidebar_button_toggle_dark_mode">Toggle Dark Mode</string>
    <string name="sidebar_button_about">About</string>
    <string name="sidebar_title_settings">Settings</string>
    <string name="sidebar_button_settings">@string/sidebar_title_settings</string>
    <string name="appbar_button_scroll_left">Scroll left</string>
    <string name="appbar_title_scroll_right">Scroll right</string>
    <string name="appbar_button_toggle_keyboard">Toggle Keyboard</string>
    <string name="toast_saved_to_downloads_folder">Saved to downloads folder</string>
    <string name="notification_title_tap_to_open">Tap to open</string>
    <string name="notification_text_saved_as">Saved as %s</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="cartoonify">Cartoonify</string>
    <string name="sketchify">Sketchify</string>
    <string name="my_creation">My Creation</string>
    <string name="facebook_downloader">Facebook</string>
    <string name="instagram_downloader">Instagram</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="empty_msg">Empty Message</string>
    <string name="whatsapp_tools">Whatsapp Tools</string>
    <string name="upload">Upload</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
</resources>