<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_bg_white_blur_12"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llWA"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg_blackish"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAutomatic"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/karla_semibold"
                android:gravity="center"
                android:text="@string/whatsapp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/divider2" />

        <LinearLayout
            android:id="@+id/llWAB"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/ripple_bg_blackish"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtManual"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/karla_semibold"
                android:gravity="center"
                android:text="@string/whatsapp_business"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_bg_blackish_12"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/karla_semibold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_primary"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>