<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="GB Version Pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMain"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/splash_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#dee1e2" />

    <LinearLayout
        android:id="@+id/llRate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_rate_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center_vertical"
            android:text="@string/rate"
            android:textColor="@color/drawer_icon_tint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShare"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_share_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/drawer_icon_tint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_privacy_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@color/drawer_icon_tint"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>