<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlMainTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imgBack"
                android:gravity="center"
                android:layout_marginEnd="36dp"
                android:maxLines="1"
                android:text="Internet Speed Meter"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:fontFamily="@font/gilroy_bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#dedede"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:id="@+id/llSpeedOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSpeedOld"
                app:layout_constraintVertical_bias="0.7">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_4"
                    android:backgroundTint="#e5f3e9"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgDownload"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_download_speed" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/gilroy_semibold"
                            android:text="@string/download"
                            android:textColor="#008923"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtDownloadSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/gilroy_medium"
                            android:text="- mbps"
                            android:textColor="#008923"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_4"
                    android:backgroundTint="#fde5ec"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgUpload"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_upload_speed" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/gilroy_semibold"
                            android:text="@string/upload"
                            android:textColor="#ea0043"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtUploadSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/gilroy_medium"
                            android:text="- mbps"
                            android:textColor="#ea0043"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--        <androidx.appcompat.widget.AppCompatImageView-->
            <!--            android:id="@+id/startSpeedTest"-->
            <!--            android:layout_width="150dp"-->
            <!--            android:layout_height="150dp"-->
            <!--            android:layout_marginTop="24dp"-->
            <!--            android:elevation="5dp"-->
            <!--            android:visibility="gone"-->
            <!--            app:layout_constraintBottom_toTopOf="@id/llSpeedOld"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent"-->
            <!--            app:layout_constraintVertical_bias="0.4"-->
            <!--            app:srcCompat="@drawable/ic_start_speed"/>-->

            <TextView
                android:id="@+id/startSpeedTestAgain"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_gradient_rounded_pink"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSpeedOld"
                app:layout_constraintVertical_bias="0.1" />

            <!--        <androidx.appcompat.widget.AppCompatImageView-->
            <!--            android:id="@+id/imgSpeedMeter"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="300dp"-->
            <!--            android:visibility="gone"-->
            <!--            app:layout_constraintBottom_toBottomOf="@id/startSpeedTest"-->
            <!--            app:layout_constraintEnd_toEndOf="@id/startSpeedTest"-->
            <!--            app:layout_constraintStart_toStartOf="@id/startSpeedTest"-->
            <!--            app:layout_constraintTop_toTopOf="@id/startSpeedTest"-->
            <!--            app:srcCompat="@drawable/speed_meter" />-->

            <me.ibrahimsn.lib.Speedometer
                android:id="@+id/imgSpeedMeter"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:borderColor="#B3D8D8D8"
                app:borderSize="24dp"
                app:fillColor="#eb008b"
                app:layout_constraintBottom_toTopOf="@id/startSpeedTest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:maxSpeed="100"
                app:metricText="Mb/s"
                app:textColor="#BF000000"
                app:textGap="48dp" />

            <!--        <androidx.appcompat.widget.AppCompatImageView-->
            <!--            android:id="@+id/imgSpeedMeterHande"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="350dp"-->
            <!--            android:layout_marginHorizontal="48dp"-->
            <!--            android:visibility="gone"-->
            <!--            app:layout_constraintEnd_toEndOf="@id/imgSpeedMeter"-->
            <!--            app:layout_constraintStart_toStartOf="@id/imgSpeedMeter"-->
            <!--            app:layout_constraintTop_toTopOf="@id/imgSpeedMeter"-->
            <!--            app:layout_constraintVertical_bias="0.7"-->
            <!--            app:srcCompat="@drawable/speed_test_hand"-->
            <!--            app:tint="@color/black" />-->

            <RelativeLayout
                android:id="@+id/llPing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/llSpeedOld"
                app:layout_constraintTop_toBottomOf="@id/imgSpeedMeter">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animConnecting"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:visibility="invisible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/connecting_net" />

                <LinearLayout
                    android:id="@+id/llPingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_mobile_data" />

                    <TextView
                        android:id="@+id/txtPing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/gilroy_semibold"
                        android:gravity="center_vertical"
                        android:text="0 ms"
                        android:textColor="#9a9a9a"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/imgSpeedMeterHande"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginHorizontal="48dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imgSpeedMeter"
                app:layout_constraintStart_toStartOf="@id/imgSpeedMeter"
                app:layout_constraintTop_toTopOf="@id/imgSpeedMeter"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/startSpeedTest"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_gradient_rounded_pink"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSpeedOld"
                app:layout_constraintVertical_bias="0.3" />

            <FrameLayout
                android:id="@+id/bannerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</RelativeLayout>